Terrraform-AWS-Infra-main/Terrraform-AWS-Infra-main/SG_ALB_Tier.tf
##SG 

resource "aws_security_group" "alb-security-group" {
  name        = "ALB Security Group"
  description = "Enable http access on port 80 and 443"
  vpc_id      = aws_vpc.private_vpc.id

  ingress {
    description = "allow port 80"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "allow port 443(HTTPS)"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "ALB Security Group"
  }
}
